objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Flags__c</fullName>
        <label>Account Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JP 2 Week Extension</fullName>
                </value>
                <value>
                    <fullName>Refunded for payment on FT signup from TV device</fullName>
                </value>
                <value>
                    <fullName>temp flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                    <default>true</default>
                    <label>Partial</label>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Active Paid</fullName>
                </value>
                <value>
                    <fullName>Active Grace</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Expired Marketing</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Email_Preferences__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Email Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuthKey__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>This field is updated when the user choose to sign out of all the devices.</description>
        <label>AuthKey</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cached_Email__c</fullName>
        <label>Cached Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cached_FirstName__c</fullName>
        <label>Cached FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cached_LastName__c</fullName>
        <label>Cached LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <label>Gift Code Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Gift Code Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_sync_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to find out if the name and email of the account have been updated in zuora or not</description>
        <inlineHelpText>Field to find out if the name and email of the account have been updated in zuora or not</inlineHelpText>
        <label>Contact sync complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D4D_Web_Email__c</fullName>
        <label>D4D Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DAZN_Id__c</fullName>
        <externalId>true</externalId>
        <label>DAZN Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DFD_First_Name__c</fullName>
        <description>This field is used for DFD User</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFD_Last_Name__c</fullName>
        <description>This field is used for DFD User</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Case_closed_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Case closed emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Case_opened_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Case opened emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Case_reply_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Case reply emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Email_change_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Email change emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Hard_offer_emails__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Apple&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Hard offer emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Name_change_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Name change emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Payment_failed_email__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Apple&apos;) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Payment failed email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Payment_method_updated_emails__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Apple&apos;) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Payment method updated emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Payment_success_email__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Apple&apos;) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Payment success email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Reset_password_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Reset password emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Welcome_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Welcome emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_all_transactional_emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn off all transactional emails</description>
        <label>Disable all transactional emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_immediate_cancel_email__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Apple&apos;) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable immediate cancel email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_password_updated_emails__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable password updated emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_transactional_emails__c</fullName>
        <formula>OR( ISPICKVAL( Type, &apos;Docomo&apos; ), Disable_all_transactional_emails__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable transaction emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_In_Contact_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the record failed to sync to communicator</description>
        <label>Error In Contact sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Trial_End_Date__c</fullName>
        <label>Free Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Trial_Start_Date__c</fullName>
        <label>Free Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_End_Date__c</fullName>
        <label>Gift Code End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Remaining_Term__c</fullName>
        <formula>IF(
    TODAY() &lt; Free_Trial_End_Date__c,
    IF(
        AND( ISNULL( Free_Trial_End_Date__c ), ISNULL( Gift_Code_End_Date__c ) ),
        0,
        ( 
         ( YEAR( Gift_Code_End_Date__c ) * 12 + MONTH( Gift_Code_End_Date__c ) ) -
         ( YEAR( Free_Trial_End_Date__c ) * 12 + MONTH( Free_Trial_End_Date__c ) ) -
         IF( ( DAY( Gift_Code_End_Date__c ) - DAY( TODAY() ) ) &lt; 0, 1, 0 )
        )
    ),
    IF(
        OR(
            AND( ISNULL( Gift_Code_End_Date__c ), ISNULL( LastInvoiceDate__c )),
            (Gift_Code_End_Date__c &lt; TODAY())
        ),
        0,
        ( 
         ( YEAR( Gift_Code_End_Date__c ) * 12 + MONTH( Gift_Code_End_Date__c ) ) -
         ( YEAR( LastInvoiceDate__c ) * 12 + MONTH( LastInvoiceDate__c ) ) -
         IF( ( DAY( Gift_Code_End_Date__c) -  DAY(  TODAY() ) ) &lt; 0, 1, 0 )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Code Remaining Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Start_Date__c</fullName>
        <label>Gift Code Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Status__c</fullName>
        <formula>IF(
    Gift_Code_Start_Date__c &gt; TODAY(),
    &apos;Applied&apos;,
    IF(
        AND( Gift_Code_Start_Date__c &lt;= TODAY(), Gift_Code_End_Date__c &gt; TODAY() ),
        &apos;In Use&apos;,
        IF(
            Gift_Code_End_Date__c &lt;= TODAY(),
            &apos;Expired&apos;,
            &apos;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Code Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giftcode__c</fullName>
        <label>Gift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Offer_date__c</fullName>
        <description>When change the status from frozen to activepaid</description>
        <label>Hard Offer date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IP_address__c</fullName>
        <description>storing IP address</description>
        <label>IP address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReadyToSyncInCommunicator__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to identify record needs to be sync in communicator.</description>
        <label>IsReadyToSyncInCommunicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReadyToSyncInZuora__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify record needs to be sync in Zuora</description>
        <label>IsReadyToSyncInZuora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Double_OptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify user is double opt-in for marketing emails.</description>
        <label>Is Double OptIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastInvoiceDate__c</fullName>
        <label>LastInvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modified_In_Last_15_Min__c</fullName>
        <formula>NOW() -  LastModifiedDate &lt;= 0.010416</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified In Last 15 Min</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NFL_Opt_In_Change_Date__c</fullName>
        <description>This field will track the Date of NFL Opt In change</description>
        <label>NFL Opt In Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NFL_marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check for Canda user to opt for NFL marketing emails</description>
        <label>NFL marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOTE__c</fullName>
        <label>NOTE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <label>Notification Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <label>Notification Language Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumFreeTrials__c</fullName>
        <label>NumFreeTrials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumGiftPeriods__c</fullName>
        <label>NumGiftPeriods</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Active_Devices__c</fullName>
        <label>Num Inactive Devices</label>
        <summaryFilterItems>
            <field>User_Devices__c.Status__c</field>
            <operation>equals</operation>
            <value>InActive</value>
        </summaryFilterItems>
        <summaryForeignKey>User_Devices__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Devices__c</fullName>
        <label>Num Devices</label>
        <summaryForeignKey>User_Devices__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Subs__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Number of Active Subs</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cancelled_Subs__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Number of Cancelled Subs</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Future_Cancels__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Number of Future Cancels</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_UserDevices__c</fullName>
        <label>Number of UserDevices</label>
        <summaryForeignKey>User_Devices__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Email_Preferences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Email Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <externalId>true</externalId>
        <label>Partner ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Ready_to_Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Partner Ready to Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Registration_Status__c</fullName>
        <label>Partner Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Sync_Error__c</fullName>
        <label>Partner Sync Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PauseScheduled__c</fullName>
        <formula>IF( 
ISNULL( Pause_From__c ), 
false, 
IF( 
Pause_From__c &gt; TODAY(), 
true, 
false 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PauseScheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pause_From__c</fullName>
        <label>Pause From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pause_Scheduled_Time__c</fullName>
        <label>Pause Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pause_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pause_Until__c</fullName>
        <label>Pause Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Last_Digits_and_Expiry_Date__c</fullName>
        <label>Payment Type,Last Digits and Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_BCD__c</fullName>
        <label>Previous BCD</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Body_1__c</fullName>
        <label>Reset Pwd Body 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Body_2__c</fullName>
        <label>Reset Pwd Body 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Body_3__c</fullName>
        <label>Reset Pwd Body 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Greeting__c</fullName>
        <label>Reset Pwd Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Link_2__c</fullName>
        <label>Reset Pwd Link 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Signature__c</fullName>
        <label>Reset Pwd Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reset_Pwd_Subject__c</fullName>
        <description>Country specific language subject line for reset password emails.</description>
        <label>Reset Pwd Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_pwd_Link_1__c</fullName>
        <label>Reset pwd Link 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieve_Email__c</fullName>
        <externalId>true</externalId>
        <label>Retrieve Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_for_cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionEndDate__c</fullName>
        <description>This field is used to store customer subscription end date for following account status flow:
1. Free Trial To Frozen
2. Active Paid to Frozen
Date in this field will be populated when user cancelled the subscription before the completion of free trial or paid period. Also this field will be used to trigger time based workflow rule to change above mentioned status.</description>
        <label>SubscriptionEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Date__c</fullName>
        <label>Subscription Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_Error_Msg__c</fullName>
        <label>Sync Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_formula__c</fullName>
        <formula>IF(Notification_Language_Code__c =&quot;&quot;     , &apos;de&apos; ,  
IF(Notification_Language_Code__c =&apos;en_GB&apos;, &apos;en&apos; , Notification_Language_Code__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Subscriptions__c</fullName>
        <formula>TEXT(VALUE( Number_of_Active_Subs__c) +VALUE( Number_of_Cancelled_Subs__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Subscriptions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEmail__c</fullName>
        <label>UniqueEmail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnsubscribeLink__c</fullName>
        <formula>&apos;&lt;&apos;+&apos;tr&gt;&apos;  + $Label.emailtem+&apos;&apos;+&apos;&lt;&apos;+&apos;a href=&quot;&apos;+$Label.siteurl+&apos;/&apos;+Notification_Country_Code__c+&apos;-&apos;+Notification_Language_Code__c+&apos;/&apos;+&apos;UID&apos;+Id+&apos;&quot; id=&quot;Unsubscribe&quot; target=&quot;_blank&quot;&apos;+&apos;&gt;&apos;+&apos;Unsubscribe&apos;+&apos;&lt;&apos;+&apos;/&apos;+&apos;a&apos;+&apos;&gt;&apos;+&apos; &apos;+&apos;&lt;/&apos;+&apos;td&apos;+&apos;&gt;&apos;+&apos;  &lt;/&apos;+&apos;tr&gt;&apos;</formula>
        <label>UnsubscribeLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewEmail__c</fullName>
        <formula>IF( AND(ISPICKVAL(Type,&quot;Docomo&quot;), Partner_ID__c  &lt;&gt; null), &apos;##########&apos;, PersonEmail)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_ID__c</fullName>
        <description>Populating the viewer id of User on account</description>
        <label>Viewer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isInactiveRecordCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInactiveRecordCreated</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Beta_users</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Subscription_Date__c</columns>
        <columns>Account_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/14/2016</value>
        </filters>
        <label>Beta users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Head_Of_CS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_Accounts</fullName>
        <booleanFilter>( 1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>Account_Status__c</columns>
        <columns>Notification_Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>AT</value>
        </filters>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>CH</value>
        </filters>
        <filters>
            <field>ACCOUNT.IS_CUSTOMERSUCCESS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DACH Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>DACH_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Accounts</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Status__c</columns>
        <columns>Notification_Country_Code__c</columns>
        <columns>Notification_Language_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Notification_Country_Code__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>Notification_Language_Code__c</field>
            <operation>equals</operation>
            <value>Ja</value>
        </filters>
        <label>JP Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Pausedme</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Status__c</columns>
        <columns>Pause_From__c</columns>
        <columns>PauseScheduled__c</columns>
        <columns>Pause_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Paused</value>
        </filters>
        <filters>
            <field>Pause_Scheduled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pausedme</label>
        <language>en_US</language>
        <sharedTo>
            <role>Director</role>
            <role>Head_of_Customer_Service</role>
            <role>Marketing</role>
            <role>Product_Team</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Business Account</description>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>First_Name_Last_Name_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(FirstName) || ISBLANK(TRIM(FirstName)) || ISNUMBER(TRIM(FirstName)) || ISNULL(LastName) || ISBLANK(TRIM(LastName)) || ISNUMBER(TRIM(LastName))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Account First Name  and Last Name cannot have numbers and it cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestUserCheck</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISCHANGED(TestUser__c) &amp;&amp; ($UserRole.Name &lt;&gt; &apos;Product Team&apos;),true,false)</errorConditionFormula>
        <errorMessage>You dont have an permission to update this field. Only Product Team members can update this field.</errorMessage>
    </validationRules>
</CustomObject>